# MicroprocessorApplication_zephyr_arduinos

CO2_LCD_example/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
CO2_LCD_example/include/: uart_co2.h
CO2_LCD_example/src/: main.c  uart_co2.c
DHT22_LCD_example/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
DHT22_LCD_example/include/: LCD.h
DHT22_LCD_example/src/: LCD.c  main.c
DHT22_exmaple/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
DHT22_exmaple/include/: dht_sensor.h
DHT22_exmaple/src/: dht_sensor.c  main.c
I2C_LCD_example/: CMakeLists.txt  nrf52840dk_nrf52840.overlay
I2C_LCD_example/src/: main.c
LCD_example/: prj.conf
LCD_example/src/: LCD.c  LCD.h  main.c
